# Dial-Telegram-Mini

./: .env.example  .gitignore  .prettierignore  .prettierrc  DECENTRALIZED_AI.md  DESIGN_IMPROVEMENTS.md  ENVIRONMENT.md  NETWORK_SELECTION.md  README.md  REFERRAL_SYSTEM.md  SETUP_AI.sh  SETUP_BOT.sh  TRANSACTION_IMPLEMENTATION.md  UPDATE_BOT_COMMANDS.md  next.config.ts  notes.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
decentralizedAI/: .env.example  DEPLOYMENT_ERC20.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  glyph_ledger.sqlite  pyproject.toml
decentralizedAI/contracts/: .env.example  GlyphToken.sol  hardhat.config.js  package.json
decentralizedAI/contracts/scripts/: deploy.js
decentralizedAI/src/glyph/: __main__.py  bot_signal.py  bot_telegram.py  bot_whatsapp.py  client.py  crypto.py  dht_sync.py  gateway.py  ledger.py  node.py  receipt.py  reward_minter.py
decentralizedAI/src/glyph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
exampleold/: CommandPanel.tsx  CreateRequestForm.tsx  MessageComposer.tsx  PaymentRequestMessage.tsx  exampleoldrequestNetwork.ts
llm-docs/: llms-full.txt
recovery/invoices/: invoice-0x0feeaddr-anon-01d.json
scripts/: create-alchemy-webhook.sh  enable-inline-mode.md  set-bot-commands.sh  set-bot-webhook.sh  sync-env-and-webhook.sh
scripts/invoice/: create2-tools.ts  create2x.ts  predictFromPayload.ts  recoverInvoice.ts
src/app/: page.tsx  providers.tsx
src/components/: BottomNav.tsx  OnrampModal.tsx  ReferralCard.tsx  (+1 more)
(+116 files in other folders)
